# substrate-node-template

./: Cargo.toml
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/src/: constants.rs  lib.rs
specs/: mainnetSpec_human.json
